<resources>
    <string name="app_name">Croviz</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="skip_sign_in">Skip sign in</string>
    <string name="skip_sign_in_details">If you don\'t sign in you won\'t be able to create quizzes and compare your results with other users. Do you want to continue?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="google_sign_in_failed">Google sign in failed</string>
    <string name="error_required">Required*</string>
    <string name="add_question">Add question</string>
    <string name="add_question_details">Would you like to add another question?</string>
    <string name="finish_quiz_creation">No, finish quiz creation</string>
    <string name="add_another_question">Yes, add another question</string>
    <string name="error_answers">You need to add at least one correct and one incorrect question</string>
    <string name="error_questions">You need to add at least one question to your quiz.</string>
    <string name="logged_out_user">Logged out user</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_details">You are about to sign out. Do you want to continue?</string>
    <string name="general_knowledge">General knowledge</string>
    <string name="music">Music</string>
    <string name="tv">TV</string>
    <string name="science">Science</string>
    <string name="history">History</string>
    <string name="geography">Geography</string>
    <string name="sports">Sports</string>
    <string name="question">Question\u0020</string>
    <string name="out_of">\u0020out of\u0020</string>
    <string name="quiz_results">Quiz results:\u0020</string>
    <string name="points">\u0020points!</string>
    <string name="question_label">Question</string>
    <string name="no_question">No questions available at the moment</string>
    <string name="choose_answer">Choose one or more answer</string>
    <string name="submit_answers">Submit answers</string>
    <string name="app_icon">App icon</string>
    <string name="welcome">Welcome to Croviz!</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="dont_sign_in">Don\'t want to sign in?</string>
    <string name="continue_without_account">Continue without account</string>
    <string name="quiz_image">Quiz image</string>
    <string name="qr_label">Shareable QR code</string>
    <string name="qr_code">QR code</string>
    <string name="statistics_label">Statistics</string>
    <string name="score">Score</string>
    <string name="total_answers">Total answers</string>
    <string name="correct_answers">Correct answers</string>
    <string name="incorrect_answers">Incorrect answers</string>
    <string name="quizzes">Quizzes</string>
    <string name="questions">Questions</string>
    <string name="endless_quiz">Endless quiz</string>
    <string name="endless">Endless</string>
    <string name="endless_description">Answer random questions endlessly!</string>
    <string name="all">All</string>
    <string name="no_quizzes">There are no quizzes under this category</string>
    <string name="statistics_description">Check how you compare with other players</string>
    <string name="fab_description">Add question or scan QR</string>
    <string name="quiz_complete">You completed the quiz!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="home">Go to home page</string>
    <string name="new_quiz">Create a new Quiz</string>
    <string name="enter_quiz_name">Enter a name for your quiz</string>
    <string name="quiz_name">Quiz name</string>
    <string name="pick_quiz_category">Pick a category for your quiz</string>
    <string name="create_quiz_anonymously">Create quiz anonymously</string>
    <string name="create_quiz_anon_description">Your name will not be shown in quiz details</string>
    <string name="add_questions">Add questions</string>
    <string name="enter_question_label">Enter question</string>
    <string name="add_answers">Add answers</string>
    <string name="answer">Answer</string>
    <string name="correct_answer">Correct answer</string>
    <string name="add">Add</string>
    <string name="submit_question">Submit question</string>
    <string name="quiz_description">Each question has one or more correct answer\nCorrect answers give you 10 points\nIncorrect answers reduce your points by 5</string>
    <string name="start_quiz">Start quiz</string>
    <string name="hello">Hello,</string>
    <string name="sign_in">Sign in</string>
    <string name="enable_dark_theme">Enable Dark theme</string>
    <string name="clear_stats">Clear stats</string>
    <string name="remove">Remove</string>
    <string name="create_quiz">Create a new quiz</string>
    <string name="scan_qr">Scan quiz QR code</string>
    <string name="your_score">Your score</string>
    <string name="global_score">Global score</string>
    <string name="your_total_answers">Your total answers</string>
    <string name="global_total_answers">Global total answers</string>
    <string name="your_correct_answers">Your correct answers</string>
    <string name="global_correct_answers">Global correct answers</string>
    <string name="your_incorrect_answers">Your incorrect answers</string>
    <string name="global_incorrect_answers">Global incorrect answers</string>
    <string name="your_completed_quizzes">Your completed quizzes</string>
    <string name="global_completed_quizzes">Global completed quizzes</string>
    <string name="your_completed_questions">Your completed questions</string>
    <string name="global_completed_questions">Global completed questions</string>
    <string name="forbidden_stats">You need to be signed in to save your stats</string>
    <string name="cancelled">Cancelled</string>
    <string name="sign_out_success">Successfully signed out</string>
    <string name="clear_stats_description">You are about to clear your stats. Do you want to continue?</string>
    <string name="clear_stats_success">Successfully cleared stats</string>
    <string name="question_hint">Question</string>
    <string name="wrong_qr">Wrong QR code</string>
</resources>